--- a/EFP/templates/EFP/index.html
+++ b/EFP/templates/EFP/index.html
@@ -1,7 +1,7 @@
 <h1>Paste EFT fit here</h1>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'EFP:index' %}" method="post">
+<form action="{% url 'EFP:index' %}" method="post" enctype="multipart/form-data">
 {% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
