added multiple item support and starting to add file upload support

--- a/EFP/templates/EFP/index.html
+++ b/EFP/templates/EFP/index.html
@@ -1,4 +1,4 @@
-<h1>Paste EFT fit here</h1>
+<h1>Paste fit here</h1>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="{% url 'EFP:index' %}" method="post" enctype="multipart/form-data">
