--- a/EFP/templates/EFP/index.html
+++ b/EFP/templates/EFP/index.html
@@ -1,4 +1,5 @@
-<h1>Paste fit here</h1>
+<h1>Paste fit here or upload file</h1>
+<h2>Warning: Uploaded file will override pasted data, do only one!</h2>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="{% url 'EFP:index' %}" method="post" enctype="multipart/form-data">
