--- a/EFP/templates/EFP/results.html
+++ b/EFP/templates/EFP/results.html
@@ -6,6 +6,7 @@
 
 	<table border="1">
 		<tr>
+			<td align="center"><b>Slot</b></td>
 			<td align="center"><b>Name</b></td>
 			<td align="center"><b>Quantity</b></td>
 			<td align="center"><b>Buy</b></td>
@@ -15,11 +16,13 @@
 	{% for row in fitting %}
 		<tr>
 		{% if row.name %}
+			<td align="left">{{ row.slotname }}</td>
 			<td align="left">{{ row.name }}</td>
 			<td align="center">{{ row.quantity }}</td>
 			<td align="right">{{ row.buy }}</td>
 			<td align="right">{{ row.sell }}</td>
 		{% else %}
+			<td></td>
 			<td></td>
 			<td></td>
 			<td align="right"><b>{{ row.buy }}</b></td>
